--- a/.dialogue/config.yaml
+++ b/.dialogue/config.yaml
@@ -12,7 +12,7 @@ interaction_mode: partnership
 # - auto: Detect from active user count (2+ users within 30 days = team)
 # - solo: Simplified mode - no user registration, single session memo, no sync reminders
 # - team: Full features - user tracking, per-user memos, git sync checks and reminders
-team_mode: auto
+team_mode: team
 
 # Deployed projects would typically use docs/ instead of implementation/.
 # See schema_deployment-model.md for deployment scenarios.
